policies/templates/gcp_compute_serial_port_enable_v1.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-compute-serial-port-enable-v1
spec:
  crd:
    spec:
      names:
        kind: GCPComputeSerialPortEnableConstraintV1
      validation:
        openAPIV3Schema:
          {}

  targets:
   validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/compute_serial_port_enable.rego")
            #
            # Copyright 2018 Google LLC
            #
            # Licensed under the Apache License, Version 2.0 (the "License");
            # you may not use this file except in compliance with the License.
            # You may obtain a copy of the License at
            #
            #      http://www.apache.org/licenses/LICENSE-2.0
            #
            # Unless required by applicable law or agreed to in writing, software
            # distributed under the License is distributed on an "AS IS" BASIS,
            # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            # See the License for the specific language governing permissions and
            # limitations under the License.
            #
            
            package templates.gcp.GCPComputeSerialPortEnableConstraintV1
            
            import data.validator.gcp.lib as lib
            
            deny[{
            	"msg": message,
            	"details": metadata,
            }] {
            	constraint := input.constraint
            	asset := input.asset
            	asset.asset_type == "compute.googleapis.com/Instance"
            	instance := asset.resource.data
            	metadata_config := lib.get_default(instance, "metadata", {})
            
            	# check if key and values are as expected
            	metadata_config.items[i].key == "serial-port-enable"
            	metadata_config.items[i].value != "false"
            
            	message := sprintf("%v Enable connecting to serial ports should not be enabled for VM instance.", [asset.name])
            	ancestry_path = lib.get_default(asset, "ancestry_path", "")
            	metadata := {"ancestry_path": ancestry_path}
            }
            #ENDINLINE
